Convert custom elements to es6 web components without Polymer.

--- a/app/elements/bridge-hand/bridge-hand.css
+++ b/app/elements/bridge-hand/bridge-hand.css
@@ -1,2 +1,16 @@
 bridge-hand {
 }
+
+bridge-hand .cards-display {
+  position: relative;
+}
+
+bridge-hand playing-card {
+  position: absolute;
+  left: 0%;
+  z-index: 1;
+}
+
+bridge-hand playing-card:hover {
+  z-index: 999 !important;
+}
