--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -7,6 +7,10 @@ body {
   background-color: #101000; /* #fbe4ba; */
 }
 
+.hidden {
+  display: none !important;
+}
+
 .rotate90 {
   -webkit-transform:rotate(90deg);
   -moz-transform: rotate(90deg);
@@ -30,3 +34,5 @@ body {
   -o-transform: rotate(270deg);
   transform: rotate(270deg);
 }
+
+h1 { color: red; }
