--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -35,4 +35,28 @@ body {
   transform: rotate(270deg);
 }
 
-h1 { color: red; }
+#opponent-left-hand, trick-field, #opponent-right-hand {
+  display: inline-block;
+}
+
+#playing-field {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+trick-field {
+  flex: 1;
+}
+
+.center-row {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+
+.bottom-row, .top-row {
+  text-align: center;
+}
