Update card hover animation

--- a/app/elements/bridge-hand/bridge-hand.css
+++ b/app/elements/bridge-hand/bridge-hand.css
@@ -1,6 +1,6 @@
 bridge-hand {
   text-align: center;
-  width: 450px;
+  width: 525px;
 }
 
 bridge-hand .cards-display {
@@ -13,8 +13,11 @@ bridge-hand playing-card {
   display: inline-block;
   position: relative;
   z-index: 1;
+  margin-right: 0px;
+  -webkit-transition: margin-right 0.4s; /* Safari */
+  transition: margin-right 0.4s;
 }
 
 bridge-hand playing-card:hover {
-  z-index: 999 !important;
+  margin-right: 80px;
 }
