--- a/app/elements/info-bar/info-bar.css
+++ b/app/elements/info-bar/info-bar.css
@@ -6,6 +6,8 @@ info-bar {
 }
 
 info-bar .vertical-divider {
+  flex-shrink: 0;
+
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a8b1a4+0,a8b1a4+99&0.01+0,1+20,1+50,1+80,0.01+100 */
   background: -moz-linear-gradient(top, rgba(168,177,164,0.01) 0%, rgba(168,177,164,1) 20%, rgba(168,177,164,1) 50%, rgba(168,177,164,1) 80%, rgba(168,177,164,0.06) 99%, rgba(168,177,164,0.01) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, rgba(168,177,164,0.01) 0%,rgba(168,177,164,1) 20%,rgba(168,177,164,1) 50%,rgba(168,177,164,1) 80%,rgba(168,177,164,0.06) 99%,rgba(168,177,164,0.01) 100%); /* Chrome10-25,Safari5.1-6 */
@@ -19,9 +21,11 @@ info-bar .vertical-divider {
 info-bar .content {
   text-align: center;
   flex: 1;
+  align-items: center;
 }
 
 info-bar .content h1 {
   font-weight: 100;
   font-family: "Gotham-ExtraLight";
+  margin-bottom: 16px;
 }
